# stm32f407zg_with_zephyr_prj

./: README.md
applications/: CMakeLists.txt  VERSION  code_format.sh  prj.conf  version.cmake  version.h.in  version.py
applications/Core/: main.c
applications/f407_prj/: CMakeLists.txt  prj.conf
applications/f407_prj/Core/: main.c
boards/arm/f407zg_prj/: Kconfig.f407zg_prj  board.cmake  board.yml  f407zg_prj.dts  f407zg_prj.yaml  f407zg_prj_defconfig
boards/arm/st/: Kconfig.board  Kconfig.defconfig  board.cmake  f407zg_prj.dts  f407zg_prj.yaml  f407zg_prj_defconfig
